fix(modal): Set a bigger z-index

--- a/packages/modal/src/Modal.sass
+++ b/packages/modal/src/Modal.sass
@@ -54,6 +54,7 @@ $topbar-height: 3.4rem
 
 .Modal
   overflow: scroll
+  z-index: 50
 
 .Modal__Backdrop
   background: rgba($black, 0.4)
